[package]
name = "ice-party-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
thiserror = "1"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
anyhow = "1"
public-ip = "0.2.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.11"
tracing-bunyan-formatter = "0.3.4"
